Web: fix layer z-index between leaflet control and bootstrap select

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -91,7 +91,7 @@ a.btn-primary:active { color:#FFFFFF; }
 }
 
 .leaflet-top, .leaflet-bottom {
-    z-index: 999 !important; /* Bootstrap also use 1000 for control */
+    z-index: 2 !important; /* Bootstrap also use 1000 for control */
 }
 
 hr {
